@@ -112,6 +112,8 @@ void IndicatorTab::insertTab (QWidget *w, QString n, int p)
   tab->update();
   
   tab->setCurrentTab(id);
+  
+  stack->raiseWidget(id);
 }
 
 
